# HERoEHS-Walking

heroehs_online_walking_pattern_generator/: CMakeLists.txt  package.xml
heroehs_online_walking_pattern_generator/include/heroehs_online_walking_pattern_generator/: online_endpoint_calculator.h  online_pelvis_xy_calculator.h  online_walking_pattern_generator.h
heroehs_online_walking_pattern_generator/src/: online_endpoint_calculator.cpp  online_pelvis_xy_calculator.cpp  online_walking_pattern_generator.cpp
heroehs_pd_balance_controller/: CMakeLists.txt  package.xml
heroehs_pd_balance_controller/include/heroehs_pd_balance_controller/: heroehs_pd_balance_controller.h
heroehs_pd_balance_controller/src/: heroehs_pd_balance_controller.cpp
